export const snapshot = {};

snapshot[`model 1`] = `
[
  Expr {
    raw: {
      else: Expr {
        raw: {
          create_index: Expr {
            raw: {
              object: {
                name: "pack_github_id",
                source: Expr {
                  raw: {
                    collection: "pack",
                  },
                },
                terms: Expr {
                  raw: [
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "id",
                            ],
                          },
                        },
                      },
                    },
                  ],
                },
                unique: true,
                values: undefined,
              },
            },
          },
        },
      },
      if: Expr {
        raw: {
          exists: Expr {
            raw: {
              index: "pack_github_id",
            },
          },
        },
      },
      then: Expr {
        raw: {
          params: Expr {
            raw: {
              object: {
                name: "pack_github_id",
                source: Expr {
                  raw: {
                    collection: "pack",
                  },
                },
                terms: Expr {
                  raw: [
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "id",
                            ],
                          },
                        },
                      },
                    },
                  ],
                },
                unique: true,
                values: undefined,
              },
            },
          },
          update: Expr {
            raw: {
              index: "pack_github_id",
            },
          },
        },
      },
    },
  },
]
`;

snapshot[`model 2`] = `
[
  Expr {
    raw: {
      else: Expr {
        raw: {
          create_index: Expr {
            raw: {
              object: {
                name: "pack_manifest_id",
                source: Expr {
                  raw: {
                    collection: "pack",
                  },
                },
                terms: Expr {
                  raw: [
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "manifest",
                              "id",
                            ],
                          },
                        },
                      },
                    },
                  ],
                },
                unique: true,
                values: undefined,
              },
            },
          },
        },
      },
      if: Expr {
        raw: {
          exists: Expr {
            raw: {
              index: "pack_manifest_id",
            },
          },
        },
      },
      then: Expr {
        raw: {
          params: Expr {
            raw: {
              object: {
                name: "pack_manifest_id",
                source: Expr {
                  raw: {
                    collection: "pack",
                  },
                },
                terms: Expr {
                  raw: [
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "manifest",
                              "id",
                            ],
                          },
                        },
                      },
                    },
                  ],
                },
                unique: true,
                values: undefined,
              },
            },
          },
          update: Expr {
            raw: {
              index: "pack_manifest_id",
            },
          },
        },
      },
    },
  },
]
`;

snapshot[`model 3`] = `
[
  Expr {
    raw: {
      else: Expr {
        raw: {
          create_function: Expr {
            raw: {
              object: {
                body: Expr {
                  raw: {
                    query: Expr {
                      raw: {
                        expr: Expr {
                          raw: {
                            in: Expr {
                              raw: {
                                in: Expr {
                                  raw: {
                                    else: Expr {
                                      raw: {
                                        object: {
                                          error: "PACK_ID_CHANGED",
                                          ok: false,
                                        },
                                      },
                                    },
                                    if: Expr {
                                      raw: {
                                        equals: Expr {
                                          raw: [
                                            Expr {
                                              raw: {
                                                from: Expr {
                                                  raw: {
                                                    var: "pack",
                                                  },
                                                },
                                                select: Expr {
                                                  raw: [
                                                    "data",
                                                    "manifest",
                                                    "id",
                                                  ],
                                                },
                                              },
                                            },
                                            Expr {
                                              raw: {
                                                from: Expr {
                                                  raw: {
                                                    var: "manifest",
                                                  },
                                                },
                                                select: Expr {
                                                  raw: [
                                                    "id",
                                                  ],
                                                },
                                              },
                                            },
                                          ],
                                        },
                                      },
                                    },
                                    then: Expr {
                                      raw: {
                                        in: Expr {
                                          raw: {
                                            object: {
                                              ok: true,
                                            },
                                          },
                                        },
                                        let: [
                                          {
                                            updatedInstance: Expr {
                                              raw: {
                                                else: Expr {
                                                  raw: {
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                packs: Expr {
                                                                  raw: {
                                                                    append: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "pack",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                    collection: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "instance",
                                                                          },
                                                                        },
                                                                        select: Expr {
                                                                          raw: [
                                                                            "data",
                                                                            "packs",
                                                                          ],
                                                                        },
                                                                      },
                                                                    },
                                                                  },
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                    update: Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "instance",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  },
                                                },
                                                if: Expr {
                                                  raw: {
                                                    contains_value: Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "pack",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                    in: Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "instance",
                                                          },
                                                        },
                                                        select: Expr {
                                                          raw: [
                                                            "data",
                                                            "packs",
                                                          ],
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                                then: Expr {
                                                  raw: {
                                                    var: "instance",
                                                  },
                                                },
                                              },
                                            },
                                          },
                                          {
                                            updatePack: Expr {
                                              raw: {
                                                params: Expr {
                                                  raw: {
                                                    object: {
                                                      data: Expr {
                                                        raw: {
                                                          object: {
                                                            instances: Expr {
                                                              raw: {
                                                                else: Expr {
                                                                  raw: {
                                                                    append: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "instance",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                    collection: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "pack",
                                                                          },
                                                                        },
                                                                        select: Expr {
                                                                          raw: [
                                                                            "data",
                                                                            "instances",
                                                                          ],
                                                                        },
                                                                      },
                                                                    },
                                                                  },
                                                                },
                                                                if: Expr {
                                                                  raw: {
                                                                    contains_value: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "instance",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                    in: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "pack",
                                                                          },
                                                                        },
                                                                        select: Expr {
                                                                          raw: [
                                                                            "data",
                                                                            "instances",
                                                                          ],
                                                                        },
                                                                      },
                                                                    },
                                                                  },
                                                                },
                                                                then: Expr {
                                                                  raw: {
                                                                    from: Expr {
                                                                      raw: {
                                                                        var: "pack",
                                                                      },
                                                                    },
                                                                    select: Expr {
                                                                      raw: [
                                                                        "data",
                                                                        "instances",
                                                                      ],
                                                                    },
                                                                  },
                                                                },
                                                              },
                                                            },
                                                            manifest: Expr {
                                                              raw: {
                                                                var: "manifest",
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                                update: Expr {
                                                  raw: {
                                                    from: Expr {
                                                      raw: {
                                                        var: "pack",
                                                      },
                                                    },
                                                    select: "ref",
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        ],
                                      },
                                    },
                                  },
                                },
                                let: [
                                  {
                                    match: Expr {
                                      raw: {
                                        match: Expr {
                                          raw: {
                                            index: "pack_github_id",
                                          },
                                        },
                                        terms: Expr {
                                          raw: {
                                            var: "githubId",
                                          },
                                        },
                                      },
                                    },
                                  },
                                  {
                                    pack: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            create: Expr {
                                              raw: {
                                                collection: "pack",
                                              },
                                            },
                                            params: Expr {
                                              raw: {
                                                object: {
                                                  data: Expr {
                                                    raw: {
                                                      object: {
                                                        firstInstall: Expr {
                                                          raw: {
                                                            now: null,
                                                          },
                                                        },
                                                        id: Expr {
                                                          raw: {
                                                            var: "githubId",
                                                          },
                                                        },
                                                        installedBy: Expr {
                                                          raw: {
                                                            from: Expr {
                                                              raw: {
                                                                var: "user",
                                                              },
                                                            },
                                                            select: "ref",
                                                          },
                                                        },
                                                        instances: Expr {
                                                          raw: [
                                                          ],
                                                        },
                                                        lastInstall: Expr {
                                                          raw: {
                                                            now: null,
                                                          },
                                                        },
                                                        manifest: Expr {
                                                          raw: {
                                                            var: "manifest",
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                            let: [
                              {
                                user: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            create: Expr {
                                              raw: {
                                                collection: "user",
                                              },
                                            },
                                            params: Expr {
                                              raw: {
                                                object: {
                                                  data: Expr {
                                                    raw: {
                                                      object: {
                                                        badges: Expr {
                                                          raw: [
                                                            Expr {
                                                              raw: {
                                                                id: "357600097731608662",
                                                                ref: Expr {
                                                                  raw: {
                                                                    collection: "badge",
                                                                  },
                                                                },
                                                              },
                                                            },
                                                          ],
                                                        },
                                                        id: Expr {
                                                          raw: {
                                                            var: "userId",
                                                          },
                                                        },
                                                        inventories: Expr {
                                                          raw: [
                                                          ],
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            match: Expr {
                                              raw: {
                                                index: "users_discord_id",
                                              },
                                            },
                                            terms: Expr {
                                              raw: {
                                                var: "userId",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                              {
                                guild: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            create: Expr {
                                              raw: {
                                                collection: "guild",
                                              },
                                            },
                                            params: Expr {
                                              raw: {
                                                object: {
                                                  data: Expr {
                                                    raw: {
                                                      object: {
                                                        id: Expr {
                                                          raw: {
                                                            var: "guildId",
                                                          },
                                                        },
                                                        instances: Expr {
                                                          raw: [
                                                          ],
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            match: Expr {
                                              raw: {
                                                index: "guilds_discord_id",
                                              },
                                            },
                                            terms: Expr {
                                              raw: {
                                                var: "guildId",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                              {
                                instance: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            in: Expr {
                                              raw: {
                                                var: "createdInstance",
                                              },
                                            },
                                            let: [
                                              {
                                                createdInstance: Expr {
                                                  raw: {
                                                    create: Expr {
                                                      raw: {
                                                        collection: "instance",
                                                      },
                                                    },
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                guild: Expr {
                                                                  raw: {
                                                                    from: Expr {
                                                                      raw: {
                                                                        var: "guild",
                                                                      },
                                                                    },
                                                                    select: "ref",
                                                                  },
                                                                },
                                                                inventories: Expr {
                                                                  raw: [
                                                                  ],
                                                                },
                                                                main: true,
                                                                packs: Expr {
                                                                  raw: [
                                                                  ],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                              {
                                                updatedGuild: Expr {
                                                  raw: {
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                instances: Expr {
                                                                  raw: [
                                                                    Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "createdInstance",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                  ],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                    update: Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "guild",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            ],
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                from: Expr {
                                                  raw: {
                                                    var: "match",
                                                  },
                                                },
                                                select: Expr {
                                                  raw: [
                                                    0,
                                                  ],
                                                },
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            from: Expr {
                                              raw: {
                                                var: "guild",
                                              },
                                            },
                                            select: Expr {
                                              raw: [
                                                "data",
                                                "instances",
                                              ],
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                            ],
                          },
                        },
                        lambda: Expr {
                          raw: [
                            "userId",
                            "guildId",
                            "githubId",
                            "manifest",
                          ],
                        },
                      },
                    },
                  },
                },
                name: "add_pack_to_instance",
              },
            },
          },
        },
      },
      if: Expr {
        raw: {
          exists: Expr {
            raw: {
              function: "add_pack_to_instance",
            },
          },
        },
      },
      then: Expr {
        raw: {
          params: Expr {
            raw: {
              object: {
                body: Expr {
                  raw: {
                    query: Expr {
                      raw: {
                        expr: Expr {
                          raw: {
                            in: Expr {
                              raw: {
                                in: Expr {
                                  raw: {
                                    else: Expr {
                                      raw: {
                                        object: {
                                          error: "PACK_ID_CHANGED",
                                          ok: false,
                                        },
                                      },
                                    },
                                    if: Expr {
                                      raw: {
                                        equals: Expr {
                                          raw: [
                                            Expr {
                                              raw: {
                                                from: Expr {
                                                  raw: {
                                                    var: "pack",
                                                  },
                                                },
                                                select: Expr {
                                                  raw: [
                                                    "data",
                                                    "manifest",
                                                    "id",
                                                  ],
                                                },
                                              },
                                            },
                                            Expr {
                                              raw: {
                                                from: Expr {
                                                  raw: {
                                                    var: "manifest",
                                                  },
                                                },
                                                select: Expr {
                                                  raw: [
                                                    "id",
                                                  ],
                                                },
                                              },
                                            },
                                          ],
                                        },
                                      },
                                    },
                                    then: Expr {
                                      raw: {
                                        in: Expr {
                                          raw: {
                                            object: {
                                              ok: true,
                                            },
                                          },
                                        },
                                        let: [
                                          {
                                            updatedInstance: Expr {
                                              raw: {
                                                else: Expr {
                                                  raw: {
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                packs: Expr {
                                                                  raw: {
                                                                    append: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "pack",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                    collection: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "instance",
                                                                          },
                                                                        },
                                                                        select: Expr {
                                                                          raw: [
                                                                            "data",
                                                                            "packs",
                                                                          ],
                                                                        },
                                                                      },
                                                                    },
                                                                  },
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                    update: Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "instance",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  },
                                                },
                                                if: Expr {
                                                  raw: {
                                                    contains_value: Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "pack",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                    in: Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "instance",
                                                          },
                                                        },
                                                        select: Expr {
                                                          raw: [
                                                            "data",
                                                            "packs",
                                                          ],
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                                then: Expr {
                                                  raw: {
                                                    var: "instance",
                                                  },
                                                },
                                              },
                                            },
                                          },
                                          {
                                            updatePack: Expr {
                                              raw: {
                                                params: Expr {
                                                  raw: {
                                                    object: {
                                                      data: Expr {
                                                        raw: {
                                                          object: {
                                                            instances: Expr {
                                                              raw: {
                                                                else: Expr {
                                                                  raw: {
                                                                    append: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "instance",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                    collection: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "pack",
                                                                          },
                                                                        },
                                                                        select: Expr {
                                                                          raw: [
                                                                            "data",
                                                                            "instances",
                                                                          ],
                                                                        },
                                                                      },
                                                                    },
                                                                  },
                                                                },
                                                                if: Expr {
                                                                  raw: {
                                                                    contains_value: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "instance",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                    in: Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "pack",
                                                                          },
                                                                        },
                                                                        select: Expr {
                                                                          raw: [
                                                                            "data",
                                                                            "instances",
                                                                          ],
                                                                        },
                                                                      },
                                                                    },
                                                                  },
                                                                },
                                                                then: Expr {
                                                                  raw: {
                                                                    from: Expr {
                                                                      raw: {
                                                                        var: "pack",
                                                                      },
                                                                    },
                                                                    select: Expr {
                                                                      raw: [
                                                                        "data",
                                                                        "instances",
                                                                      ],
                                                                    },
                                                                  },
                                                                },
                                                              },
                                                            },
                                                            manifest: Expr {
                                                              raw: {
                                                                var: "manifest",
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                                update: Expr {
                                                  raw: {
                                                    from: Expr {
                                                      raw: {
                                                        var: "pack",
                                                      },
                                                    },
                                                    select: "ref",
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        ],
                                      },
                                    },
                                  },
                                },
                                let: [
                                  {
                                    match: Expr {
                                      raw: {
                                        match: Expr {
                                          raw: {
                                            index: "pack_github_id",
                                          },
                                        },
                                        terms: Expr {
                                          raw: {
                                            var: "githubId",
                                          },
                                        },
                                      },
                                    },
                                  },
                                  {
                                    pack: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            create: Expr {
                                              raw: {
                                                collection: "pack",
                                              },
                                            },
                                            params: Expr {
                                              raw: {
                                                object: {
                                                  data: Expr {
                                                    raw: {
                                                      object: {
                                                        firstInstall: Expr {
                                                          raw: {
                                                            now: null,
                                                          },
                                                        },
                                                        id: Expr {
                                                          raw: {
                                                            var: "githubId",
                                                          },
                                                        },
                                                        installedBy: Expr {
                                                          raw: {
                                                            from: Expr {
                                                              raw: {
                                                                var: "user",
                                                              },
                                                            },
                                                            select: "ref",
                                                          },
                                                        },
                                                        instances: Expr {
                                                          raw: [
                                                          ],
                                                        },
                                                        lastInstall: Expr {
                                                          raw: {
                                                            now: null,
                                                          },
                                                        },
                                                        manifest: Expr {
                                                          raw: {
                                                            var: "manifest",
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                            let: [
                              {
                                user: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            create: Expr {
                                              raw: {
                                                collection: "user",
                                              },
                                            },
                                            params: Expr {
                                              raw: {
                                                object: {
                                                  data: Expr {
                                                    raw: {
                                                      object: {
                                                        badges: Expr {
                                                          raw: [
                                                            Expr {
                                                              raw: {
                                                                id: "357600097731608662",
                                                                ref: Expr {
                                                                  raw: {
                                                                    collection: "badge",
                                                                  },
                                                                },
                                                              },
                                                            },
                                                          ],
                                                        },
                                                        id: Expr {
                                                          raw: {
                                                            var: "userId",
                                                          },
                                                        },
                                                        inventories: Expr {
                                                          raw: [
                                                          ],
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            match: Expr {
                                              raw: {
                                                index: "users_discord_id",
                                              },
                                            },
                                            terms: Expr {
                                              raw: {
                                                var: "userId",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                              {
                                guild: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            create: Expr {
                                              raw: {
                                                collection: "guild",
                                              },
                                            },
                                            params: Expr {
                                              raw: {
                                                object: {
                                                  data: Expr {
                                                    raw: {
                                                      object: {
                                                        id: Expr {
                                                          raw: {
                                                            var: "guildId",
                                                          },
                                                        },
                                                        instances: Expr {
                                                          raw: [
                                                          ],
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            match: Expr {
                                              raw: {
                                                index: "guilds_discord_id",
                                              },
                                            },
                                            terms: Expr {
                                              raw: {
                                                var: "guildId",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                              {
                                instance: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            in: Expr {
                                              raw: {
                                                var: "createdInstance",
                                              },
                                            },
                                            let: [
                                              {
                                                createdInstance: Expr {
                                                  raw: {
                                                    create: Expr {
                                                      raw: {
                                                        collection: "instance",
                                                      },
                                                    },
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                guild: Expr {
                                                                  raw: {
                                                                    from: Expr {
                                                                      raw: {
                                                                        var: "guild",
                                                                      },
                                                                    },
                                                                    select: "ref",
                                                                  },
                                                                },
                                                                inventories: Expr {
                                                                  raw: [
                                                                  ],
                                                                },
                                                                main: true,
                                                                packs: Expr {
                                                                  raw: [
                                                                  ],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                              {
                                                updatedGuild: Expr {
                                                  raw: {
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                instances: Expr {
                                                                  raw: [
                                                                    Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "createdInstance",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                  ],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                    update: Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "guild",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            ],
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                from: Expr {
                                                  raw: {
                                                    var: "match",
                                                  },
                                                },
                                                select: Expr {
                                                  raw: [
                                                    0,
                                                  ],
                                                },
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            from: Expr {
                                              raw: {
                                                var: "guild",
                                              },
                                            },
                                            select: Expr {
                                              raw: [
                                                "data",
                                                "instances",
                                              ],
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                            ],
                          },
                        },
                        lambda: Expr {
                          raw: [
                            "userId",
                            "guildId",
                            "githubId",
                            "manifest",
                          ],
                        },
                      },
                    },
                  },
                },
                name: "add_pack_to_instance",
              },
            },
          },
          update: Expr {
            raw: {
              function: "add_pack_to_instance",
            },
          },
        },
      },
    },
  },
]
`;
